--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,13 @@
+html,
+body,
+#root,
 .App {
-    text-align: center;
+  height: 100%;
+}
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
@@ -32,30 +40,51 @@
   }
 }
 
-.test{
-    height: 3em;
-    flex-grow: 1;
-    border: 1px solid black;
+.test {
+  height: 3em;
+  flex-grow: 1;
+  border: 1px solid black;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
-.nav{
-    width: 100%;
-    height: 3em;
-    display: flex;
-    justify-content: center;
-    background-color: lightgray;
+.nav {
+  width: 100%;
+  height: 3em;
+  display: flex;
+  justify-content: center;
+  background-color: lightgray;
+  margin-top: 1em;
 }
 
-.nav_item{
-    height: 100%;
-    line-height: 2.5em;
-    margin-left:1em;
-    margin-right: 1em;
+.nav_item {
+  height: 100%;
+  line-height: 2.5em;
+  padding-left: 1em;
+  padding-right: 1em;
+  font-weight: 600;
+  text-decoration: none;
+  color: #135aa7;
+}
+
+.quickinfo {
+  height: 7em;
+  background-color: lightgray;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 600;
+  text-align: center;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  color: black;
+  background-color: #d0d0d0;
+  margin-top: auto;
 }
