Aspects added, can be chosen

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -75,6 +75,9 @@ body,
 .quickinfo {
   height: 7em;
   background-color: lightgray;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 .btn {
