--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -1,18 +1,21 @@
 .nav {
-	width: 100%;
-	height: 3em;
-	display: flex;
-	justify-content: center;
-	background-color: lightgray;
-	margin-top: 1em;
+    min-width: 100%;
+    height: 3em;
+    display: flex;
+    background-color: lightgray;
+    margin-top: 1em;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
 }
 
 .nav_item {
-	height: 100%;
-	line-height: 2.5em;
-	padding-left: 1em;
-	padding-right: 1em;
-	font-weight: 600;
-	text-decoration: none;
-	color: #135aa7;
+    height: 100%;
+    line-height: 2.5em;
+    padding-left: 1em;
+    padding-right: 1em;
+    font-weight: 600;
+    text-decoration: none;
+    color: #135aa7;
+    flex-shrink: 0;
 }
