--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -60,8 +60,27 @@ body,
 .container {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     align-items: center;
     width: 100%;
+}
+
+.row_container {
+    display: flex;
+    flex-grow: 1;
+    overflow-y: auto;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+}
+
+.row_container > * {
+    margin-left: 1em;
+    margin-right: 1em;
+    height: 100%;
+    width: 100%;
+    border: 1px solid black;
+    //background-color: red;
 }
 
 .scroll_vert {
@@ -105,6 +124,10 @@ body,
     background-color: #d0d0d0;
 }
 
+.wide{
+    width: 100%;
+}
+
 .btn_active {
     color: red;
 }
@@ -114,5 +137,10 @@ body,
 }
 
 .top_auto {
+    margin-top: auto;
+}
+
+.wide_top_auto{
+    width: 100%;
     margin-top: auto;
 }
