--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -80,7 +80,8 @@ body,
     height: 100%;
     width: 100%;
     border: 1px solid black;
-    //background-color: red;
+    border-radius: 1em;
+    box-sizing: border-box;
 }
 
 .scroll_vert {
@@ -121,7 +122,7 @@ body,
     padding: 0.375rem 0.75rem;
     line-height: 1.5;
     color: black;
-    background-color: #d0d0d0;
+    background-color:#d0d0d0;
 }
 
 .wide{
