--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -13,6 +13,13 @@ body,
     height: 100%;
     max-height: 100%;
     overflow-y: scroll;
+    background-color: rgb(145, 148, 161);
+}
+
+.bar{
+    background-color: rgb(145, 148, 161);
+    border:0;
+
 }
 
 .inner {
@@ -63,11 +70,15 @@ body,
     flex-grow: 1;
     align-items: center;
     width: 100%;
+    padding: 1em;
+    //border: 2px solid gray;
+    background-color: rgb(192, 193, 196);
 }
 
 .row_container {
-    display: flex;
-    flex-grow: 1;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(25em, 100%), 1fr));
+    gap: 1em;
     overflow-y: auto;
     flex-direction: row;
     height: 100%;
@@ -75,12 +86,8 @@ body,
 }
 
 .row_container > * {
-    margin-left: 1em;
-    margin-right: 1em;
     height: 100%;
     width: 100%;
-    border: 1px solid black;
-    border-radius: 1em;
     box-sizing: border-box;
 }
 
