--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -1,24 +1,44 @@
+*{
+    box-sizing: border-box;
+}
 html,
 body,
 #root,
 .App {
-    height: 100%;
+	height: 100vh;
     max-height: 100%;
+    width: 100vw;
+    max-width: none;
+    margin: none;
+	display: grid;
+	grid-template-columns: auto 1fr;
+	grid-template-rows: auto 1fr auto;
+	grid-template-areas: 
+		"sidebar header"
+		"sidebar main"
+		"sidebar footer";
 }
 
-.App {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
+body{
+    width: 100%;
     height: 100%;
-    max-height: 100%;
-    overflow-y: scroll;
-    background-color: rgb(145, 148, 161);
+	--grid-size: 2rem;
+	--grid-color: darkgray;
+	--paper-color: #fffbd8;
+
+	background-color: var(--paper-color);
+	//background-size: var(--grid-size, --grid-size);
+	background-image: 
+		linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 1px, transparent 1px),
+		linear-gradient(to right, rgba(0, 0, 0, 0.5) 1px, transparent 1px);
+	background-size: var(--grid-size) var(--grid-size); /* Larger grid size (e.g., 30px) */
 }
+
 
 .bar{
-    background-color: rgb(145, 148, 161);
+    /*background-color: rgb(145, 148, 161);*/
     border:0;
+    width: 100%;
 
 }
 
@@ -40,7 +60,7 @@ body,
 }
 
 .header {
-    background-color: #282c34;
+    /*background-color: #282c34;*/
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -64,6 +84,17 @@ body,
     }
 }
 
+.wrapper_main{
+	height: 100%;
+	display: grid;
+	grid-template-columns: auto 1fr;
+	grid-template-rows: auto 1fr auto;
+	grid-template-areas: 
+		"sidebar header"
+		"sidebar main"
+		"sidebar footer";
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -71,8 +102,8 @@ body,
     align-items: center;
     width: 100%;
     padding: 1em;
-    //border: 2px solid gray;
-    background-color: rgb(192, 193, 196);
+    border: 2px solid gray;
+    /*background-color: rgb(192, 193, 196);*/
 }
 
 .row_container {
@@ -101,7 +132,7 @@ body,
     min-height: 5em;
     display: flex;
     justify-content: center;
-    background-color: lightgray;
+    /*background-color: lightgray;*/
 }
 
 .nav_item {
@@ -116,10 +147,11 @@ body,
 
 .quickinfo {
     min-height: 10em;
-    background-color: lightgray;
+    /*background-color: lightgray;*/
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    grid-area: header;
 }
 
 .btn {
@@ -129,7 +161,7 @@ body,
     padding: 0.375rem 0.75rem;
     line-height: 1.5;
     color: black;
-    background-color:#d0d0d0;
+    /*background-color:#d0d0d0;*/
 }
 
 .wide{
@@ -151,4 +183,9 @@ body,
 .wide_top_auto{
     width: 100%;
     margin-top: auto;
+}
+
+.tickBar{
+    width: 100%;
+    grid-area: footer;
 }
