--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -1,191 +1,224 @@
-*{
-    box-sizing: border-box;
+* {
+	box-sizing: border-box;
 }
+
 html,
 body,
 #root,
 .App {
-	height: 100vh;
-    max-height: 100%;
-    width: 100vw;
-    max-width: none;
-    margin: none;
+	height: 100%;
+	max-height: 100%;
+	width: 100%;
+	max-width: none;
+	margin: 0;
+	padding: 0;
+	font-family: "CultivationIdle";
+}
+
+body {
+	width: 100%;
+	height: 100%;
+	font-family: "CultivationIdle";
+	--grid-size: 2rem;
+	--grid-color: darkgray;
+	--paper-color: #fffbd8;
+	--paper-color-2: #fffff0;
+
+	background-color: var(--paper-color-2);
+	--background-size: var(--grid-size, --grid-size);
+	background-image:
+		linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 1px, transparent 1px),
+		linear-gradient(to right, rgba(0, 0, 0, 0.2) 1px, transparent 1px);
+	background-size: var(--grid-size) var(--grid-size);
+	/* Larger grid size (e.g., 30px) */
+}
+
+
+.App {
+
 	display: grid;
 	grid-template-columns: auto 1fr;
 	grid-template-rows: auto 1fr auto;
-	grid-template-areas: 
+	grid-template-areas:
 		"sidebar header"
 		"sidebar main"
 		"sidebar footer";
 }
 
-body{
-    width: 100%;
-    height: 100%;
-	--grid-size: 2rem;
-	--grid-color: darkgray;
-	--paper-color: #fffbd8;
 
-	background-color: var(--paper-color);
-	//background-size: var(--grid-size, --grid-size);
-	background-image: 
-		linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 1px, transparent 1px),
-		linear-gradient(to right, rgba(0, 0, 0, 0.5) 1px, transparent 1px);
-	background-size: var(--grid-size) var(--grid-size); /* Larger grid size (e.g., 30px) */
-}
-
-
-.bar{
-    /*background-color: rgb(145, 148, 161);*/
-    border:0;
-    width: 100%;
+.bar {
+	/*background-color: rgb(145, 148, 161);*/
+	border: 0;
+	width: 100%;
 
 }
 
 .inner {
-    display: flex;
-    flex-direction: column;
-    flex: 0 0 50%;
+	display: flex;
+	flex-direction: column;
+	flex: 0 0 50%;
 }
 
 .max {
-    height: 100%;
-    max-height: 100%;
+	height: 100%;
+	max-height: 100%;
 }
 
 .logo {
-    animation: logo-spin infinite 20s linear;
-    height: 40vmin;
-    pointer-events: none;
+	animation: logo-spin infinite 20s linear;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 .header {
-    /*background-color: #282c34;*/
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+	/*background-color: #282c34;*/
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .link {
-    color: #b318f0;
+	color: #b318f0;
 }
 
 @keyframes logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
+	from {
+		transform: rotate(0deg);
+	}
 
-    to {
-        transform: rotate(360deg);
-    }
+	to {
+		transform: rotate(360deg);
+	}
 }
 
-.wrapper_main{
+.wrapper_main {
 	height: 100%;
 	display: grid;
 	grid-template-columns: auto 1fr;
 	grid-template-rows: auto 1fr auto;
-	grid-template-areas: 
+	grid-template-areas:
 		"sidebar header"
 		"sidebar main"
 		"sidebar footer";
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    align-items: center;
-    width: 100%;
-    padding: 1em;
-    border: 2px solid gray;
-    /*background-color: rgb(192, 193, 196);*/
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	align-items: center;
+	width: 100%;
+	padding: 1em;
+	border: 10px solid transparent;
+	border-image: url(../assets/box1.png) 150 stretch;
+	/*background-color: rgb(192, 193, 196);*/
 }
 
 .row_container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(25em, 100%), 1fr));
-    gap: 1em;
-    overflow-y: auto;
-    flex-direction: row;
-    height: 100%;
-    width: 100%;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(min(25em, 100%), 1fr));
+	gap: 1em;
+	overflow-y: auto;
+	flex-direction: row;
+	height: 100%;
+	width: 100%;
 }
 
-.row_container > * {
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box;
+.row_container>* {
+	height: 100%;
+	width: 100%;
+	box-sizing: border-box;
 }
 
 .scroll_vert {
-    overflow-y: scroll;
-    height: 100%;
+	overflow-y: scroll;
+	height: 100%;
 }
 
 .nav {
-    width: 100%;
-    min-height: 5em;
-    display: flex;
-    justify-content: center;
-    /*background-color: lightgray;*/
+	width: 100%;
+	min-height: 5em;
+	display: flex;
+	justify-content: center;
+	/*background-color: lightgray;*/
 }
 
 .nav_item {
-    height: 100%;
-    line-height: 2.5em;
-    padding-left: 1em;
-    padding-right: 1em;
-    font-weight: 600;
-    text-decoration: none;
-    color: #135aa7;
+	height: 100%;
+	line-height: 2.5em;
+	padding-left: 1em;
+	padding-right: 1em;
+	font-weight: 600;
+	text-decoration: none;
+	color: #135aa7;
 }
 
 .quickinfo {
-    min-height: 10em;
-    /*background-color: lightgray;*/
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-area: header;
+	min-height: 10em;
+	/*background-color: lightgray;*/
+	display: grid;
+	--grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr 1fr 1fr;
+	grid-area: header;
+}
+
+
+.healthbar {
+	--border: 1px solid green;
+	height: 4rem;
+	width: 15rem;
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-start;
+	color: black;
+	font-size: 2rem;
+}
+
+.healthbar div {
+	padding: 0.5rem;
 }
 
 .btn {
-    display: inline-block;
-    font-weight: 600;
-    text-align: center;
-    padding: 0.375rem 0.75rem;
-    line-height: 1.5;
-    color: black;
-    /*background-color:#d0d0d0;*/
+	display: inline-block;
+	font-weight: 600;
+	text-align: center;
+	padding: 0.375rem 0.75rem;
+	line-height: 1.5;
+	color: black;
+	border: 15px solid transparent;
+	border-image: url(../assets/box-button1.png) 90 stretch;
+	background: inherit;
 }
 
-.wide{
-    width: 100%;
+.wide {
+	width: 100%;
 }
 
 .btn_active {
-    color: red;
+	color: red;
 }
 
 .btn_ongoing {
-    color: blue;
+	color: blue;
 }
 
 .top_auto {
-    margin-top: auto;
+	margin-top: auto;
 }
 
-.wide_top_auto{
-    width: 100%;
-    margin-top: auto;
+.wide_top_auto {
+	width: 100%;
+	margin-top: auto;
+	background: inherit;
+	border: inherit;
 }
 
-.tickBar{
-    width: 100%;
-    grid-area: footer;
+.tickBar {
+	width: 100%;
+	grid-area: footer;
 }
