fixed broken class assignments

--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -23,3 +23,8 @@
 	border: 15px solid transparent;
 	border-image: url(../assets/box-button1.png) 90 stretch;
 }
+
+.nav_item:hover {
+	cursor: pointer;
+	color: purple;
+}
