--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -1,5 +1,33 @@
 * {
 	box-sizing: border-box;
+	--text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+	--webkit-text-stroke: 1px white;
+	text-shadow:
+		-2px -2px 0 white,
+		-1px -2px 0 white,
+		0px -2px 0 white,
+		1px -2px 0 white,
+		2px -2px 0 white,
+		-2px -1px 0 white,
+		-1px -1px 0 white,
+		0px -1px 0 white,
+		1px -1px 0 white,
+		2px -1px 0 white,
+		-2px 0px 0 white,
+		-1px 0px 0 white,
+		1px 0px 0 white,
+		2px 0px 0 white,
+		-2px 1px 0 white,
+		-1px 1px 0 white,
+		0px 1px 0 white,
+		1px 1px 0 white,
+		2px 1px 0 white,
+		-2px 2px 0 white,
+		-1px 2px 0 white,
+		0px 2px 0 white,
+		1px 2px 0 white,
+		2px 2px 0 white;
+
 }
 
 html,
@@ -42,7 +70,7 @@ body {
 	grid-template-areas:
 		"sidebar header"
 		"sidebar main"
-		"sidebar footer";
+		"footer footer";
 }
 
 
@@ -71,7 +99,6 @@ body {
 }
 
 .header {
-	/*background-color: #282c34;*/
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -79,20 +106,6 @@ body {
 	justify-content: center;
 	font-size: calc(10px + 2vmin);
 	color: white;
-}
-
-.link {
-	color: #b318f0;
-}
-
-@keyframes logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-
-	to {
-		transform: rotate(360deg);
-	}
 }
 
 .wrapper_main {
@@ -230,11 +243,11 @@ body {
 .wide_top_auto {
 	width: 100%;
 	margin-top: auto;
-	background: inherit;
-	border: inherit;
 }
 
 .tickBar {
 	width: 100%;
+	height: 1rem;
+	overflow: hidden;
 	grid-area: footer;
 }
