--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -21,7 +21,7 @@
 	--background-color: rgba(1, 1, 1, 0.2);
 	background: inherit;
 	border: 15px solid transparent;
-	border-image: url(../assets/box-button1.png) 90 stretch;
+	border-image: url(/CultivationIdle/box-button1.png) 90 stretch;
 }
 
 .nav_item:hover {
