--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,18 @@ button {
 	font-family: inherit;
 	font-size: inherit;
 }
+
+.modal {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	padding: 1rem;
+	background-color: white;
+	overflow: auto;
+	max-height: 90%;
+	max-width: 90%;
+	border: 10px solid transparent;
+	border-image: url(/CultivationIdle/box1.png) 150 stretch;
+}
