--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -149,6 +149,28 @@ body {
 	box-sizing: border-box;
 }
 
+.enemies_container {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	padding-top: 0;
+}
+
+.enemy_card {
+	padding-top: 0;
+	margin-top: 0;
+}
+
+.action_card {
+	height: 100%;
+}
+
+.combat_card {
+	width: 100%;
+	height: 100%;
+}
+
 .scroll_vert {
 	overflow-y: scroll;
 	height: 100%;
@@ -212,13 +234,22 @@ body {
 .manabar {
 	height: 4rem;
 	width: 100%;
-	max-width: 100rem;
+	max-width: 200rem;
 	position: relative;
 
 }
 
 .manabar * {
 	border-radius: 0.2rem;
+}
+
+.loot_modal {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	align-items: center;
+	width: 100%;
+	padding: 1em;
 }
 
 .btn {
