--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -1,8 +1,13 @@
 * {
 	font-family: "CultivationIdle";
+	font-weight: 900;
 	box-sizing: border-box;
-	--text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
 	--webkit-text-stroke: 1px white;
+
+}
+
+.text_outline {
+
 	text-shadow:
 		-2px -2px 0 white,
 		-1px -2px 0 white,
@@ -28,7 +33,6 @@
 		0px 2px 0 white,
 		1px 2px 0 white,
 		2px 2px 0 white;
-
 }
 
 html,
@@ -199,7 +203,7 @@ body {
 	line-height: 2.5em;
 	padding-left: 1em;
 	padding-right: 1em;
-	font-weight: 600;
+	font-weight: 900;
 	text-decoration: none;
 	color: #135aa7;
 }
@@ -264,7 +268,7 @@ body {
 
 .btn {
 	display: inline-block;
-	font-weight: 600;
+	font-weight: 900;
 	text-align: center;
 	padding: 0.375rem 0.75rem;
 	line-height: 1.5;
