--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -171,6 +171,12 @@ body {
 	padding-top: 0;
 }
 
+.combat_container {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+
 .enemy_card {
 	padding-top: 0;
 	margin-top: 0;
@@ -183,6 +189,7 @@ body {
 .combat_card {
 	width: 100%;
 	height: 100%;
+	flex-grow: 1;
 }
 
 .scroll_vert {
@@ -266,6 +273,7 @@ body {
 }
 
 .btn {
+	text-decoration: none;
 	display: inline-block;
 	text-align: center;
 	padding: 0.375rem 0.75rem;
