--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -180,6 +180,13 @@ body {
 .enemy_card {
 	padding-top: 0;
 	margin-top: 0;
+	display: flex;
+}
+
+.enemy_sprite {
+	width: 100%;
+	max-width: 10rem;
+	aspect-ratio: keep;
 }
 
 .action_card {
