Added support for location specific functionality in camp

--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -163,6 +163,10 @@ body {
 	box-sizing: border-box;
 }
 
+.scroll {
+	overflow-y: scroll;
+}
+
 .enemies_container {
 	width: 100%;
 	display: flex;
