--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -3,6 +3,31 @@
 	font-weight: 600;
 	box-sizing: border-box;
 	--webkit-text-stroke: 1px white;
+	--text-shadow:
+		-2px -2px 0 white,
+		-1px -2px 0 white,
+		0px -2px 0 white,
+		1px -2px 0 white,
+		2px -2px 0 white,
+		-2px -1px 0 white,
+		-1px -1px 0 white,
+		0px -1px 0 white,
+		1px -1px 0 white,
+		2px -1px 0 white,
+		-2px 0px 0 white,
+		-1px 0px 0 white,
+		1px 0px 0 white,
+		2px 0px 0 white,
+		-2px 1px 0 white,
+		-1px 1px 0 white,
+		0px 1px 0 white,
+		1px 1px 0 white,
+		2px 1px 0 white,
+		-2px 2px 0 white,
+		-1px 2px 0 white,
+		0px 2px 0 white,
+		1px 2px 0 white,
+		2px 2px 0 white;
 
 }
 
@@ -285,10 +310,10 @@ body {
 
 .btn {
 	text-decoration: none;
+	line-height: 0;
 	display: inline-block;
 	text-align: center;
 	padding: 0.375rem 0.75rem;
-	line-height: 1.5;
 	color: black;
 	border: 15px solid transparent;
 	border-image: url(/box-button1.png) 90 stretch;
@@ -297,7 +322,32 @@ body {
 
 .btn:hover {
 	cursor: pointer;
-	color: purple;
+	position: relative;
+	text-shadow: var(--text-shadow);
+}
+
+.btn:hover::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	height: 100%;
+	width: 100%;
+	max-width: 15ch;
+	margin: auto;
+	/* Limit based on text width */
+	background-image: url("/CultivationIdle/button-scribble1.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100% 100%;
+	filter: opacity(0.6) saturate(3);
+	z-index: 0;
+	pointer-events: none;
+}
+
+.btn:hover>* {
+	position: relative;
+	z-index: 1;
+	line-height: 0;
 }
 
 .dropdown {
@@ -312,11 +362,61 @@ body {
 }
 
 .btn_active {
+	position: relative;
+	display: inline-block;
+	text-shadow: var(--text-shadow);
+	line-height: 0;
+}
+
+.btn_active::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	height: 100%;
+	width: 100%;
+	max-width: 15ch;
+	margin: auto;
+	background-image: url("/CultivationIdle/button-scribble1.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100% 100%;
+	filter: opacity(0.6) invert(84%) sepia(50%) saturate(497%) hue-rotate(347deg) brightness(96%) contrast(98%);
 	color: red;
+	z-index: 0;
+	pointer-events: none;
+}
+
+.btn_active>* {
+	position: relative;
+	z-index: 1;
 }
 
 .btn_ongoing {
-	color: blue;
+	position: relative;
+	text-shadow: var(--text-shadow);
+	line-height: 0;
+}
+
+.btn_ongoing::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	height: 100%;
+	width: 100%;
+	max-width: 15ch;
+	margin: auto;
+	background-image: url("/CultivationIdle/button-scribble1.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100% 100%;
+	filter: opacity(0.6) sepia(100) saturate(3) hue-rotate(180deg);
+	z-index: 0;
+	pointer-events: none;
+}
+
+.btn_ongoing>* {
+	position: relative;
+	z-index: 1;
 }
 
 .top_auto {
@@ -333,4 +433,74 @@ body {
 	height: 1rem;
 	overflow: hidden;
 	grid-area: footer;
+}
+
+
+.enemy_active {
+	position: relative;
+	display: inline-block;
+	text-shadow: var(--text-shadow);
+}
+
+.enemy_active::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: -1ch;
+	height: 100%;
+	width: 100%;
+	max-width: 10ch;
+	background-image: url("/CultivationIdle/button-scribble-tall1.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100% 100%;
+	filter: opacity(0.6) invert(84%) sepia(50%) saturate(497%) hue-rotate(347deg) brightness(96%) contrast(98%);
+	z-index: 0;
+	pointer-events: none;
+}
+
+.enemy_active>* {
+	position: relative;
+	z-index: 1;
+}
+
+.enemy_btn {
+	text-decoration: none;
+	display: inline-block;
+	text-align: center;
+	padding: 0.375rem 0.75rem;
+	line-height: 1.5;
+	color: black;
+	border: 15px solid transparent;
+	border-image: url(/box-button1.png) 90 stretch;
+	background: inherit;
+}
+
+.enemy_btn:hover {
+	cursor: pointer;
+	position: relative;
+	text-shadow: var(--text-shadow);
+}
+
+.enemy_btn:hover::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: -1ch;
+	height: 100%;
+	width: 100%;
+	max-width: 10ch;
+	/* Limit based on text width */
+	background-image: url("/CultivationIdle/button-scribble-tall1.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100% 100%;
+	filter: opacity(0.6) saturate(3);
+	z-index: 0;
+	pointer-events: none;
+}
+
+.enemy_btn:hover>* {
+	position: relative;
+	z-index: 1;
 }
